--- a/web/selecto/products/templates/products/review_details.html
+++ b/web/selecto/products/templates/products/review_details.html
@@ -1,1 +1,4 @@
-<p>{{ review.review_content }}</p>
+{% extends 'products/header.html' %}
+{% block content %}
+    <p>{{ review.review_content }}</p>
+{% endblock %}
