--- a/web/selecto/products/templates/products/home.html
+++ b/web/selecto/products/templates/products/home.html
@@ -1,22 +1,29 @@
 {% extends 'products/header.html' %}
 
 {% block content %}
-    <h2>Featured Product</h2>
-    {% if product_list|length > 0 %}
-        <h4><a href="{% url 'products:details' product.id %}">{{ p.product_name }}</a></h4>
+  <div class="featured">
+    <div class="featured-product">
+      <h2>Featured Product</h2>
+      {% if product_list|length > 0 %}
+        <h3><a href="{% url 'products:details' product.id %}">{{ product.product_name }}</a></h3>
         <p>{{ product.product_description }}</p>
-    {% else %}
+      {% else %}
         <p>No product to display</p>
-    {% endif %}
+      {% endif %}
+    </div>
 
-    <h2>Featured Review</h2>
-    {% if review_list|length > 0 %}
-        <h4><a href="{% url 'products:review_details' product.id review.id %}">{{ review.id }}</a></h4>
+    <div class="featured-review">
+      <h2>Featured Review</h2>
+      {% if review_list|length > 0 %}
+        <h3><a href="{% url 'products:review_details' product.id review.id %}">{{ review.id }}</a></h3>
         <p>{{ review.review_content }}</p>
-    {% else %}
+      {% else %}
         <p>No reviews to display</p>
-    {% endif %}
+      {% endif %}
+    </div>
+  </div>
 
-    <a href="{% url 'products:index' %}"><h2>See All Products</h2></a>
-    
+  <div class="see-all">
+    <a href="{% url 'products:index' %}">See All Products</a>
+  </div>
 {% endblock %}
