--- a/web/selecto/products/templates/products/signup.html
+++ b/web/selecto/products/templates/products/signup.html
@@ -1,12 +1,15 @@
 {% extends "accounts/base.html" %}
 
 {% block content %}
-    <h2>Sign Up</h2>
-    <form method="post" action="{% url 'account_signup' %}">
-     {% csrf_token %}
-     {{ form.as_p }}
-     <button type="submit">Sign Up</button>
-    </form>
-    <p>or</p>
-    <a href="{% provider_login_url 'google' process='login' %}?next={{ request.GET.next|urlencode }}}">Sign up with Google</a>
+    <div class="account_signup">
+        <h2>Sign Up</h2>
+        <form method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Sign Up</button>
+        </form>
+        <p>or</p>
+        {% load socialaccount %} 
+        <a href="{% provider_login_url 'google' process='login' %}?next={{ request.GET.next|urlencode }}}">Log in with Google</a>
+    </div>
 {% endblock %}
