added to sign up link to drop down menu in header

--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -90,7 +90,7 @@
 		<button class="dropbtn">&#9776;</button>
 		<div class="dropdown-content">
 			<a href="{% url 'products:index' %}">Index</a>
-			<a href="#">Link 2</a>
+			<a href="{% url 'products:signup' %}">Sign Up</a>
 			<a href="#">Link 3</a>
 		</div>
 		</div>
