adding login feature

--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -90,8 +90,8 @@
 		<button class="dropbtn">&#9776;</button>
 		<div class="dropdown-content">
 			<a href="{% url 'products:index' %}">Index</a>
-			<a href="{% url 'products:signup' %}">Sign Up</a>
-			<a href="#">Link 3</a>
+			<a href="{% url 'products:login' %}">Log In</a>
+			<a href="{% url 'products:signup'%}">Register</a>
 		</div>
 		</div>
 	</div>
