changed to google specific keys

--- a/web/selecto/products/templates/products/login.html
+++ b/web/selecto/products/templates/products/login.html
@@ -16,7 +16,7 @@
 {% block content %}
     <div class="signin-container">
       <div id="g_id_onload"
-         data-client_id='{{ client_id }}'
+         data-client_id='{{ google_client_id }}'
          data-login_uri="http://localhost:8000/login"
          data-auto_prompt="false">
       </div>
