basic contact us page, currently empty

--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -106,7 +106,7 @@
 			<p>&copy; 2023 Selecto. All Rights Reserved.</p>
 		</div>
 		<div>
-			<p><a href="#">About Us</a> | <a href="#">Contact Us</a></p>
+			<p><a href="#">About Us</a> | <a href="{% url 'products:contact_us' %}">Contact Us</a></p>
 		</div>
 	</div>
 </body>
