--- a/web/selecto/products/templates/products/contact_us.html
+++ b/web/selecto/products/templates/products/contact_us.html
@@ -1,5 +1,8 @@
 {% extends 'products/header.html' %}
 
 {% block content %}
-Placeholder
+  <div class="container">
+    <h2>Contact Us</h2>
+    <p>Contact information will soon be listed.</p>
+  </div>
 {% endblock %}
