Google sign in feature origin configured (#75)

--- a/web/selecto/products/templates/products/login.html
+++ b/web/selecto/products/templates/products/login.html
@@ -17,7 +17,10 @@
     <div class="signin-container">
       <div id="g_id_onload"
          data-client_id='{{ google_client_id }}'
-         data-login_uri="http://localhost:8000/login"
+         data-context="signin"
+         data-ux_mode="popup"
+         data-login_uri="http://localhost:8000/login/"
+         data-nonce=""
          data-auto_prompt="false">
       </div>
       <div class="g_id_signin"
