Contact Us page (#76)

--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -107,7 +107,7 @@
 			<p>&copy; 2023 Selecto. All Rights Reserved.</p>
 		</div>
 		<div>
-			<p><a href="{% url 'products:about_us' %}">About Us</a> | <a href="#">Contact Us</a></p>
+			<p><a href="{% url 'products:about_us' %}">About Us</a> | <a href="{% url 'products:contact_us' %}">Contact Us</a></p>
 		</div>
 	</div>
 </body>
