--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -10,22 +10,28 @@
 		body {
 			font-family: Helvetica, Arial, sans-serif;
 			margin: 0;
+			height: 100%;
+			width: 100%;
 			background-color: #f4f4f4;
 		}
 
 		/* Header/Logo Title */
 		.header {
+			position: relative;
 			display: flex;
 			align-items: center;
-			padding: 20px;
+			justify-content: space-between;
+			padding: 8px;
 			background-color: #031c66;
 			color: #fff;
-			font-size: 32px;
+			font-size: 16px;
+			width: 100%;
 		}
 
 		.header h1 {
 			margin: 0;
 			font-weight: bold;
+			margin-left: 40px;
 		}
 
 		.header a {
@@ -36,38 +42,48 @@
 		/* Page Content */
 		.content {
 			padding: 20px;
-			background-color: #fff;
+			background-color: rgb(239, 239, 239);
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			width: 100%;
 		}
 		.dropdown {
-			position: relative;
+			position: absolute;
+			left: 0;
+			top: 20px;
+			transform: translateY(-40%);
 			display: inline-block;
-			margin-left: auto;
-			}
+			z-index: 9999;
+		}
 
-			.dropbtn {
-    background-color: #031c66;
-    color: white;
-    padding: 8px 20px; /* updated padding */
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+		.dropbtn {
+    		background-color: #031c66;
+    		color: white;
+    		padding: 13px 12px; 
+    		font-size: 24px;
+    		border: none;
+    		cursor: pointer;
+		}
 
 			.dropdown-content {
 			display: none;
 			position: absolute;
+			top: calc(100%);
 			z-index: 1;
 			right: 0;
+			left: 0;
 			}
 
 			.dropdown-content a {
 			color: black;
-			padding: 12px 16px;
+			padding: 12px 18px;
 			text-decoration: none;
 			display: block;
 			font-size: 14px;
 			background-color: #f2f2f2;
+			width: 75px;
+  			white-space: nowrap;
+			border: 1px rgb(105, 99, 99);
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); 
 			}
 
 			.dropdown-content a:hover {
@@ -92,7 +108,7 @@
 		<div class="dropdown-content">
 			<a href="{% url 'products:index' %}">Index</a>
 			<a href="{% url 'products:login' %}">Log In</a>
-			<a href="{% url 'products:signup'%}">Register</a>
+			<a href="{% url 'products:signup'%}">Sign Up</a>
 		</div>
 		</div>
 	</div>
