--- a/web/selecto/products/templates/products/details.html
+++ b/web/selecto/products/templates/products/details.html
@@ -15,6 +15,14 @@
     </ul>
   </div>
 
+  {% if youtube_video_id|length > 0 %}
+    <div class="embedded-link">
+      <iframe width="420" height="315"
+        src="https://www.youtube.com/embed/{{ youtube_video_id }}">
+      </iframe>
+    </div>
+  {% endif %}
+
   <div class="return-link">
     <a href="{% url 'products:index' %}">&lt;&lt; Return to Products List</a>
   </div>
