--- a/web/selecto/products/templates/products/details.html
+++ b/web/selecto/products/templates/products/details.html
@@ -15,6 +15,12 @@
     </ul>
   </div>
 
+  {% for photo in photo_list %}
+    <div class="photo-list">
+      <img src="{{ photo.photo_url }}" alt="{{ product.product_name }}">
+    </div>
+  {% endfor %}
+
   {% if youtube_video_id|length > 0 %}
     <div class="embedded-link">
       <iframe width="420" height="315"
