--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -9,15 +9,25 @@
 <body>
 	<nav class="navbar navbar-expand-lg" style="background-color: #328ccc;">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="{% url 'products:home' %}">Selecto</a>
+		  <a class="navbar-brand ms-3" href="{% url 'products:home' %}">Selecto</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 				<a class="nav-link" href="{% url 'products:index' %}">Index</a>
-			</div>	  
+			</div>	 
+			<div class="navbar-nav">
+				<a class="nav-link" href="{% url 'products:api' %}">API</a>
+			</div>	 
 		</div>
+		<ul class="nav navbar-nav pull-right">
+			{% if user.is_authenticated %}
+				<a class="nav-link" href="{% url 'products:logout' %}">Logout</a>
+			{% else %}
+				<a class="nav-link" href="{% url 'products:login' %}?next={{ request.path }}">Login</a>
+			{% endif %}
+		</ul>
 	</nav>
 	<div class="content">
 		{% block content %}
