--- a/web/selecto/products/templates/products/header.html
+++ b/web/selecto/products/templates/products/header.html
@@ -4,12 +4,14 @@
 	<title>{{ page_title }}</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	{% block style %}
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	{% endblock %}
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg" style="background-color: #328ccc;">
 		<div class="container-fluid">
-		  <a class="navbar-brand ms-3" href="{% url 'products:home' %}">Selecto</a>
+		  <a class="navbar-brand ms-2" href="{% url 'products:home' %}">Selecto</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
