added template tags to generate html code for pagination

--- a/web/selecto/products/templates/products/details.html
+++ b/web/selecto/products/templates/products/details.html
@@ -1,4 +1,5 @@
 {% extends 'products/header.html' %}
+{% load pagination_tags %}
 
 {% block content %}
     <div class="clearfix">
@@ -49,23 +50,7 @@
     <h4><a class="page-link" href="{% url 'products:review_list' product.id %}">See All Reviews</a></h4>
     
     {% if is_paginated %}
-        <div class="pagination justify-content-center mt-3 mb-3">
-            <span class="step-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; first</a>
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
-
-                <span class="current-page">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                {% endif %}
-            </span>
-        </div>
+        {% pagination_links_reviews page_obj %}
     {% endif %}
     
 {% endblock %}
