--- a/web/selecto/products/templates/products/index.html
+++ b/web/selecto/products/templates/products/index.html
@@ -1,6 +1,7 @@
 <!-- This, along with any other {} are part of the template language -->
 {% extends 'products/header.html' %}
 {% load static %}
+{% load pagination_tags %}
 
 {% block content %}
     <h1 class="ms-4">Index</h1>
@@ -26,19 +27,7 @@
         </div>
     {% endfor %}
     
-    <nav class="d-flex justify-content-center mt-2 mb-2" aria-label="Pages">
-        <ul class="pagination justify-content-center">
-            <li class="page-item {% if page_obj.number == 1 %}disabled{% endif %}">
-                <a class="page-link" href="?page={{ page_obj.number|add:"-1" }}">Previous</a>
-            </li>
-            {% for num in page_obj.paginator.page_range %}
-                <li class="page-item {% if num == page_obj.number %}active{% endif %}">
-                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                </li>
-            {% endfor %}
-            <li class="page-item {% if page_obj.number == page_obj.paginator.page_range|last %}disabled{% endif %}">
-                <a class="page-link" href="?page={{ page_obj.number|add:"1" }}">Next</a>
-            </li>
-        </ul>
-    </nav>
+    {% if is_paginated %}
+        {% pagination_links_main page_obj %}
+    {% endif %}
 {% endblock %}
