--- a/web/selecto/products/templates/products/details.html
+++ b/web/selecto/products/templates/products/details.html
@@ -4,10 +4,10 @@
 {% block content %}
     <div class="clearfix">
         {% if photo_list|length > 0 %}
-            <div id="carouselExampleIndicators" class="carousel slide col-md-6 float-md-end mb-3 ms-md-3">
+            <div id="carouselPhotos" class="carousel slide col-md-6 float-md-end mb-3 ms-md-3">
                 <div class="carousel-indicators">
                     {% for photo in photo_list %}
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{ forloop.counter|add:"-1" }}" 
+                        <button type="button" data-bs-target="#carouselPhotos" data-bs-slide-to="{{ forloop.counter|add:"-1" }}" 
                             {% if forloop.counter == forloop.counter %} class="active" aria-current="true" {% endif %} 
                             aria-label="Slide {{ forloop.counter }}">
                         </button>
@@ -20,11 +20,11 @@
                         </div>
                     {% endfor %}
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselPhotos" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselPhotos" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
                 </button>
